fix add unified delevery